# cert-rotation

./: .gitignore  Dockerfile  README.md  docker-compose.yml  haproxy.cfg.example  prometheus.yml  pyproject.toml  secrets-example.md
examples/: tag_based_cert_fetch.py
src/cert_rotation/: __init__.py  acm_client.py  cert_monitor.py  config.py  haproxy_client.py  main.py  metrics.py  scheduler.py  secrets_client.py
tests/: test_secrets_client.py
